Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/Account_Request_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting that holds the URLs for regionalize Account Change Requests</description>
    <label>Account Request Settings</label>
</CustomObject>