Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/ASEAN_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>ASEAN_Request_URL__c</fullName>
    <description>This is for APAC request</description>
    <label>ASEAN Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>