Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/Enable_Pega_Account_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pega_Account_Redirect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag field to determine if the new account override page will redirect a USCAN user to the Pega web tab or to the standard edit screen</description>
    <label>Enable Pega Account Redirect</label>
    <type>Checkbox</type>
</CustomField>