Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/India_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>India_Request_URL__c</fullName>
    <label>India Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>