Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/LATAM_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>LATAM_Request_URL__c</fullName>
    <label>LATAM Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>