Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/Pega_Modify_Account_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Pega_Modify_Account_Request_URL__c</fullName>
    <description>The URL that will redirect user to Pega Modify Account Workflow</description>
    <label>Pega Modify Account Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>