Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/Pega_New_Account_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Pega_New_Account_Request_URL__c</fullName>
    <description>URL that will redirect to Pega New Account Page</description>
    <label>Pega New Account Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>