Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Request_Settings__c/fields/Pega_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Pega_Request_URL__c</fullName>
    <label>Pega Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>